@@ -1,3 +1,8 @@
+The following is the license under which libvoikko as a whole can be used.
+Parts of the library are additionally available under other licenses. See
+LICENSE.CORE for more information on those licenses.
+
+
 		    GNU GENERAL PUBLIC LICENSE
 		       Version 2, June 1991
 
